# voting-app

./: .gitlab-ci.yml  Dockerfile.go  Dockerfile.rust  app.py  nginx.conf  server.js
config/compose/: docker-compose.yml
config/helm/: values.yaml
config/helm/templates/: db-deployment.yaml  db-storage.yaml
go/: main.go
result/: Dockerfile
result-ui/: .gitlab-ci.yml
rust/src/: db.rs
vote/: requirements.txt
worker/rust/: Cargo.toml
worker/rust/src/: config.rs
